--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "url": "https://github.com/cchamberlain/cmdio/issues"
   },
   "homepage": "https://github.com/cchamberlain/cmdio#readme",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "lodash": "^3.9.3"
+  }
 }
